--- a/admin/user_edit.html
+++ b/admin/user_edit.html
@@ -51,8 +51,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="../assets/global/css/plugins.css" rel="stylesheet" type="text/css" />
     <link href="../assets/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
     <link id="style_color" href="../assets/admin/layout/css/themes/darkblue.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
-	<link href="../assets/global/css-custom/user-style.css" id="style-userts" rel="stylesheet" type="text/css" />
+	<link href="../assets/global/css-custom/user-tyle.css" id="style-userts" rel="stylesheet" type="text/css" />
     <!-- END THEME STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
@@ -223,7 +222,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="../assets/admin/layout3/img/avatar2.jpg" class="img-circle"
+                                                <img src="#"
                                                     alt="">
                                             </span>
                                             <span class="subject">
@@ -238,7 +237,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="../assets/admin/layout3/img/avatar3.jpg" class="img-circle"
+                                                <img src="#" class="img-circle"
                                                     alt="">
                                             </span>
                                             <span class="subject">
@@ -254,7 +253,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="../assets/admin/layout3/img/avatar1.jpg" class="img-circle"
+                                                <img src="#" class="img-circle"
                                                     alt="">
                                             </span>
                                             <span class="subject">
@@ -270,7 +269,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="../assets/admin/layout3/img/avatar2.jpg" class="img-circle"
+                                                <img src="#" class="img-circle"
                                                     alt="">
                                             </span>
                                             <span class="subject">
@@ -285,7 +284,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="../assets/admin/layout3/img/avatar3.jpg" class="img-circle"
+                                                <img src="#" class="img-circle"
                                                     alt="">
                                             </span>
                                             <span class="subject">
