--- a/admin/user_edit.html
+++ b/admin/user_edit.html
@@ -51,7 +51,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="../assets/global/css/plugins.css" rel="stylesheet" type="text/css" />
     <link href="../assets/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
     <link id="style_color" href="../assets/admin/layout/css/themes/darkblue.css" rel="stylesheet" type="text/css" />
-	<link href="../assets/global/css-custom/user-tyle.css" id="style-userts" rel="stylesheet" type="text/css" />
+    <link href="../assets/global/css-custom/user-tyle.css" id="style-userts" rel="stylesheet" type="text/css" />
     <!-- END THEME STYLES -->
 </head>
 <!-- END HEAD -->
@@ -221,8 +221,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="#"
-                                                    alt="">
+                                                <img src="#" alt="">
                                             </span>
                                             <span class="subject">
                                                 <span class="from">
@@ -236,8 +235,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="#" class="img-circle"
-                                                    alt="">
+                                                <img src="#" class="img-circle" alt="">
                                             </span>
                                             <span class="subject">
                                                 <span class="from">
@@ -252,8 +250,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="#" class="img-circle"
-                                                    alt="">
+                                                <img src="#" class="img-circle" alt="">
                                             </span>
                                             <span class="subject">
                                                 <span class="from">
@@ -268,8 +265,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="#" class="img-circle"
-                                                    alt="">
+                                                <img src="#" class="img-circle" alt="">
                                             </span>
                                             <span class="subject">
                                                 <span class="from">
@@ -283,8 +279,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <li>
                                         <a href="inbox.html?a=view">
                                             <span class="photo">
-                                                <img src="#" class="img-circle"
-                                                    alt="">
+                                                <img src="#" class="img-circle" alt="">
                                             </span>
                                             <span class="subject">
                                                 <span class="from">
@@ -306,7 +301,7 @@ License: You must have a valid license purchased only from themeforest(the above
                     <li class="dropdown dropdown-extended dropdown-tasks" id="header_task_bar">
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
                             data-close-others="true">
-                            <i class="icon-calendar"></i>
+                            <i class="icon-arrow-up" aria-hidden="true"></i>
                             <span class="badge badge-default">
                                 3 </span>
                         </a>
@@ -431,7 +426,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </li>
                             <li>
                                 <a href="page_calendar.html">
-                                    <i class="icon-calendar"></i> My Calendar </a>
+                                    <i class="icon-arrow-up" aria-hidden="true"></i> My Calendar </a>
                             </li>
                             <li>
                                 <a href="inbox.html">
@@ -732,115 +727,11 @@ License: You must have a valid license purchased only from themeforest(the above
                 </div>
                 <!-- /.modal -->
                 <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
-                <!-- BEGIN STYLE CUSTOMIZER -->
-                <div class="theme-panel hidden-xs hidden-sm">
-                    <div class="toggler">
-                    </div>
-                    <div class="toggler-close">
-                    </div>
-                    <div class="theme-options">
-                        <div class="theme-option theme-colors clearfix">
-                            <span>
-                                THEME COLOR </span>
-                            <ul>
-                                <li class="color-default current tooltips" data-style="default" data-container="body"
-                                    data-original-title="Default">
-                                </li>
-                                <li class="color-darkblue tooltips" data-style="darkblue" data-container="body"
-                                    data-original-title="Dark Blue">
-                                </li>
-                                <li class="color-blue tooltips" data-style="blue" data-container="body"
-                                    data-original-title="Blue">
-                                </li>
-                                <li class="color-grey tooltips" data-style="grey" data-container="body"
-                                    data-original-title="Grey">
-                                </li>
-                                <li class="color-light tooltips" data-style="light" data-container="body"
-                                    data-original-title="Light">
-                                </li>
-                                <li class="color-light2 tooltips" data-style="light2" data-container="body"
-                                    data-html="true" data-original-title="Light 2">
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Layout </span>
-                            <select class="layout-option form-control input-sm">
-                                <option value="fluid" selected="selected">Fluid</option>
-                                <option value="boxed">Boxed</option>
-                            </select>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Header </span>
-                            <select class="page-header-option form-control input-sm">
-                                <option value="fixed" selected="selected">Fixed</option>
-                                <option value="default">Default</option>
-                            </select>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Top Menu Dropdown</span>
-                            <select class="page-header-top-dropdown-style-option form-control input-sm">
-                                <option value="light" selected="selected">Light</option>
-                                <option value="dark">Dark</option>
-                            </select>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Sidebar Mode</span>
-                            <select class="sidebar-option form-control input-sm">
-                                <option value="fixed">Fixed</option>
-                                <option value="default" selected="selected">Default</option>
-                            </select>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Sidebar Menu </span>
-                            <select class="sidebar-menu-option form-control input-sm">
-                                <option value="accordion" selected="selected">Accordion</option>
-                                <option value="hover">Hover</option>
-                            </select>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Sidebar Style </span>
-                            <select class="sidebar-style-option form-control input-sm">
-                                <option value="default" selected="selected">Default</option>
-                                <option value="light">Light</option>
-                            </select>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Sidebar Position </span>
-                            <select class="sidebar-pos-option form-control input-sm">
-                                <option value="left" selected="selected">Left</option>
-                                <option value="right">Right</option>
-                            </select>
-                        </div>
-                        <div class="theme-option">
-                            <span>
-                                Footer </span>
-                            <select class="page-footer-option form-control input-sm">
-                                <option value="fixed">Fixed</option>
-                                <option value="default" selected="selected">Default</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <!-- END STYLE CUSTOMIZER -->
-                <!-- BEGIN PAGE HEADER-->
-                <h3 class="page-title">
-                    <strong>User create</strong>
-                </h3>
-
-                <!-- END PAGE HEADER-->
                 <!-- BEGIN PAGE CONTENT-->
                 <div class="portlet box blue">
                     <div class="portlet-title">
                         <div class="caption">
-                            <i class="glyphicon glyphicon-user"></i>
+                            <strong>User create</strong>
                         </div>
                     </div>
                     <div class="portlet-body form">
