--- a/admin/user_edit.html
+++ b/admin/user_edit.html
@@ -731,7 +731,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 <div class="portlet box blue">
                     <div class="portlet-title">
                         <div class="caption">
-                            <strong>User create</strong>
+                            <strong>User edit</strong>
                         </div>
                     </div>
                     <div class="portlet-body form">
